--- a/dancefloor.html
+++ b/dancefloor.html
@@ -10,7 +10,13 @@
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="GreenBlinkyDancer">add a green blinky dancer</a> 
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="squareDancer">add a square dancer</a>
+      <a href="#" class="lineUpButton">Line Up!</a>
+      <a href="#" class="pairUpButton">Pair Up!</a>
+      <a href="#" class="startDancingButton">Dance!</a>
+      <a href="#" class="stopDancingButton">Stop Dancing!</a>    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
